--- a/faq.txt
+++ b/faq.txt
@@ -1,3 +1,3 @@
-None but you may ask questions in the discord
+You may ask questions in the discord
 
-- Discord given with menu selection 10 - 
+Have ya ever had a dream where you had to fight an old short haired woman that was really good at throwing knives with a plastic shovel then killed each other at the same time but you died with a slow motion shot of a knife going through your head?
